--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run Linter
+        run: npm run lint
+        continue-on-error: true
+
       - name: Build
         run: npm run build
 
